Fixed text alignment issues

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ width: 65px;
     width: 250px;  
     height: auto;
     font-size: 18px;
-    text-align: center;
+    font-style: oblique;
 }
 
 .intro-text {
